fix disappearing footer on map page, remove extra spaces

--- a/static/scss/answers/collapsible-filters/collapsible-filters-templates.scss
+++ b/static/scss/answers/collapsible-filters/collapsible-filters-templates.scss
@@ -7,14 +7,8 @@
     }
 
     @media (min-width: $container-tablet-base) {
-      margin-bottom: 0;
-
       .CollapsibleFilters-inactive.Answers-footer {
-        display: none;
-      }
-
-      .Answers-resultsHeader {
-        top: 0;
+        display: flex;
       }
     }
   }
